Correctly handle reusing reset picture buffers.

Pending output samples are marked as ready for reuse in
DXVAVideoDecodeAccelerator::Reset. CopySurfaceComplete hasn't executed
to acquire the keyed mutex, so it shouldn't be released. The
incrementing of keyed_mutex_value_ also needs to be moved to someplace
where it's certain that it will be executed even if CopySurfaceComplete
is skipped.

BUG=625564

Review-Url: https://codereview.chromium.org/2128663003
Cr-Commit-Position: refs/heads/master@{#403997}

Former-commit-id: d1e1331024f9e1fa5c633c0d29d6339c8e9fbe83